# networkmgmt

./: CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: buildmultiarchandpush.yml  mypynpytests.yml
networkmgmt/: __init__.py  __main__.py
networkmgmt/discovery/: __init__.py  _util.py  categorize.py  cli.py  lldp.py  mermaid.py  models.py  oui.py  scanner.py  snmp.py
networkmgmt/snmp_vlan_dump/: __init__.py  _util.py  cli.py  collector.py  formatters.py  mermaid.py  models.py  snmp.py
networkmgmt/switchctrl/: __init__.py  cli.py  exceptions.py  factory.py
networkmgmt/switchctrl/base/: __init__.py  client.py  managers.py  transport.py
networkmgmt/switchctrl/models/: __init__.py  port.py  stats.py  system.py  vlan.py
networkmgmt/switchctrl/vendors/: __init__.py
networkmgmt/switchctrl/vendors/cisco/: __init__.py  client.py  managers.py
networkmgmt/switchctrl/vendors/common/: __init__.py  cisco_cli.py  cisco_managers.py
networkmgmt/switchctrl/vendors/mikrotik/: __init__.py  client.py  managers.py  rest.py  ssh.py
networkmgmt/switchctrl/vendors/netgear/: __init__.py  client.py
networkmgmt/switchctrl/vendors/qnap/: __init__.py  client.py  rest.py  utils.py
repo_scripts/: build-container-multiarch.sh  update_badge.py
scripts/: mermaid_viewer.py
tests/: conftest.py  test_discovery_categorize.py  test_discovery_cli.py  test_discovery_lldp.py  test_discovery_mermaid.py  test_discovery_models.py  test_discovery_oui.py  test_discovery_scanner_parsing.py  test_discovery_snmp.py  test_discovery_util.py  test_main_cli.py  test_snmp_vlan_formatters.py  test_snmp_vlan_mermaid.py  test_snmp_vlan_models.py  test_snmp_vlan_util.py  test_switchctrl_cisco_operations.py  test_switchctrl_cisco_parsing.py  test_switchctrl_exceptions.py  test_switchctrl_factory.py  test_switchctrl_mikrotik.py  test_switchctrl_models.py  test_switchctrl_netgear.py  test_switchctrl_qnap.py
