[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["networkmgmt"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "networkmgmt"
dynamic = ["version"]
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
description = "Multi-vendor network management toolkit — topology discovery, switch control, and VLAN management"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE.md"]

keywords = ["network", "management", "snmp", "lldp", "vlan", "switch", "cisco", "mikrotik", "qnap", "topology", "discovery"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",

    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    'requests>=2.31.0',
    'paramiko>=3.4.0',
    'PyYAML>=6.0',
    'loguru>=0.7.0',
    'fastapi>=0.128.6',
    'uvicorn[standard]>=0.34.0',
    'pydantic>=2.10.0',
    'kubernetes>=32.0.0',
    'tabulate>=0.9.0',
]

[project.scripts]
networkmgmt = "networkmgmt.__main__:main"
networkmgmt-switchctrl = "networkmgmt.switchctrl.cli:main"
networkmgmt-discover = "networkmgmt.discovery.cli:main"
networkmgmt-vlan-dump = "networkmgmt.snmp_vlan_dump.cli:main"

[project.urls]
Homepage = "https://github.com/vroomfondel/networkmgmt"
Repository = "https://github.com/vroomfondel/networkmgmt"
Issues = "https://github.com/vroomfondel/networkmgmt"

[tool.hatch.version]
path = "networkmgmt/__init__.py"

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["tests/*.py"]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = [
    "\\.venv",
    "tests",
    "venv",
    "\\.pyi$",
    "_test\\.py$",
    "\\.local\\.py$",
]
